# peg-fuzzer

./: .gitignore  Makefile  README.md  entry  pyproject.toml
peg_fuzzer/: __main__.py  cli.py  coverage.py  dedup.py  fuzzer.py  minimizer.py
peg_fuzzer/generator/: catalog.py  generator.py  terminals.py
peg_fuzzer/grammar/: keywords.py  model.py  overrides.py  parser.py
peg_fuzzer/runner/: result.py  runner.py
scripts/: gen_duckdb_tests.py  verify_interesting.py
tests/: test_coverage.py  test_dedup.py  test_generator.py  test_minimizer.py  test_parser.py  test_runner.py
