[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "peg-fuzzer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
peg-fuzzer = "peg_fuzzer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["peg_fuzzer*"]
